# fastapi-nextjs-firebase-mongo-auth

./: README.md  initial_tree.txt
backend/: .dockerignore  .gitignore  BACKEND_SETUP.md  Dockerfile  app.py  app_types.py  pyproject.toml  settings.py
backend/api/auth/: route.py  schema.py  service.py
backend/utils/: logger.py
backend/utils/firebase/: firebase_manager.py
backend/utils/middleware/: auth_middleware.py
backend/utils/mongo/: mongo_manager.py
frontend/: FRONTEND_SETUP.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/set-cookie/: route.ts
frontend/src/app/api/auth/whoami/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/profile/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: LoginForm.tsx  Navbar.tsx  Sidebar.tsx  SignupForm.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: apiClient.ts  authService.ts  config.ts  firebase.ts
frontend/src/types/: api.ts  auth.ts  forms.ts  schemas.ts
